<resources>
    <string name="app_name">CMPSC475Project1</string>
    <string name="tree_jumper">Tree Jumper</string>
    <string name="start_game">Start Game</string>
    <string name="how_to_play">How to Play</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit</string>
    <string name="ninja_skin">Ninja Skin</string>
    <string name="tarzan_skin">Tarzan Skin</string>
    <string name="monkey_skin">Monkey Skin</string>
    <string name="flappy_bird_skin">Flappy Bird Skin</string>
    <string name="sound_effects">Sound Effects</string>
    <string name="main_menu">Main Menu</string>
    <string name="instructions">The objective of the game is to score as high as possible. You can increase your score by jumping from branch to branch.

        The way you jump from each branch is by pressing and holding on the screen to charge up the jump, then releasing to jump.

        The branches will be different distances away, so you have to charge your jumps accordingly.

        Your high-score will be saved and displayed during each run.</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="score">score</string>
    <string name="save">Save</string>
    <string name="jump">JUMP</string>
</resources>