<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#FF0000">

    <Button
        android:id="@+id/mainMenuButton3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="#404040"
        android:onClick="mainMenuOnClick"
        android:text="@string/main_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveSettingsButton"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/saveSettingsButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="172dp"
        android:onClick="saveSettingsOnClick"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soundSwitch"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="544dp"
        android:text="@string/settings"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="220dp"
        android:layout_height="240dp"
        android:layout_marginBottom="284dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/ninjaRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ninja_skin" />

        <RadioButton
            android:id="@+id/tarzanRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tarzan_skin" />

        <RadioButton
            android:id="@+id/monkeyRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monkey_skin" />

        <RadioButton
            android:id="@+id/birdRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/flappy_bird_skin" />
    </RadioGroup>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/soundSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="236dp"
        android:checked="true"
        android:text="@string/sound_effects"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>